# MimicGraph

./: .gitignore  .gitmodules  Cargo.toml
mimicgraph/: Cargo.toml
mimicgraph/mimicgraph-cli/: Cargo.toml
mimicgraph/mimicgraph-cli/src/: artifacts.rs  eval.rs  main.rs
mimicgraph/mimicgraph-cli/src/cli/: mod.rs  utils.rs
mimicgraph/mimicgraph-cli/src/cli/commands/: build.rs  common.rs  eval.rs  ground_truth.rs  inspect.rs  mod.rs
mimicgraph/mimicgraph-core/: Cargo.toml
mimicgraph/mimicgraph-core/src/: eval.rs  gt.rs  labels.rs  lib.rs  main.rs
mimicgraph/mimicgraph-core/src/mimicgraph/: filtered.rs  mod.rs  plain.rs
mimicgraph/mimicgraph-core/src/vamana/: index.rs  mod.rs
src/: bitset.rs  eval.rs  labels.rs  main.rs  thesisindex.rs
src/labels/: mod.rs
src/mimicgraph/: filtered.rs  mod.rs  plain.rs
src/thesis_index/: filtered.rs  mod.rs  plain.rs
src/vamana/: filtered.rs  index.rs  mod.rs  stitched.rs
