[package]
name = "thesis-index"
version = "0.1.0"
edition = "2024"

[dependencies]
hnsw-itu = { path = "../../bachelor/hnsw-itu", features = ["serde"] }
roargraph = { path = "../../research-project/roargraph" }

min-max-heap = "1.3.0"
ndarray = "0.15.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.17"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1.3.3"
rand = { version = "0.10.0", features = ["thread_rng"] }
ordered-float = "5.1.0"

[profile.release-with-debug]
inherits = "release"
debug = "full"