[workspace]
members = [
    "mimicgraph-core",
    "mimicgraph-cli",
]

resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
mimicgraph-core = { path = "mimicgraph-core" }

hnsw-itu = { path = "../hnsw-itu", features = ["serde"] }
roargraph = { path = "../roargraph-rs" }

min-max-heap = "1.3.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.17"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1.3.3"
rand = { version = "0.10.0", features = ["thread_rng"] }
sprs = "0.11.4"
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1.0.102"

[profile.release]
debug = "full"

[profile.release-with-debug]
inherits = "release"
debug = "full"
