[package]
name = "mimicgraph-cli"
version.workspace = true
edition.workspace = true

[dependencies]
mimicgraph-core.workspace = true

hnsw-itu.workspace = true
roargraph.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
rayon.workspace = true
serde.workspace = true
bincode.workspace = true
sprs.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
anyhow.workspace = true

[[bin]]
name = "mimicgraph"
path = "src/main.rs"
