[package]
name = "mimicgraph-core"
version.workspace = true
edition.workspace = true

[dependencies]
hnsw-itu.workspace = true
roargraph.workspace = true

min-max-heap.workspace = true
tracing.workspace = true
rayon.workspace = true
serde.workspace = true
rand.workspace = true

[dev-dependencies]
serde_json = "1.0.149"